cmake_minimum_required(VERSION 3.5)

project(SUP-UTILS VERSION 1.0.0)

option(SUP_UTILS_EXPORT_BUILDTREE "Export build tree in /home/user/.cmake registry" OFF)
option(SUP_UTILS_CODAC "Compilation for CODAC environment" ON)
option(COVERAGE "Generate unit test coverage information" OFF)

set(CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/../src/cmake)
include(configuration)

add_subdirectory(main/c++)
# add_subdirectory(test/c++)

include(installation)
